# level-pivot

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  USAGE.md  vcpkg.json
.github/workflows/: ci.yml
cmake/: CrossPlatform.cmake  FindLevelDB.cmake  FindPostgreSQL.cmake
include/level_pivot/: connection_manager.hpp  error.hpp  key_parser.hpp  key_pattern.hpp  pg_memory.hpp  pivot_scanner.hpp  projection.hpp  raw_scanner.hpp  raw_writer.hpp  schema_discovery.hpp  simd_parser.hpp  type_converter.hpp  writer.hpp
npm/: .gitignore  package-lock.json  package.json  test-local.mjs
npm/scripts/: copy-binaries.sh
sql/: level_pivot--1.0.sql
src/: connection_manager.cpp  error.cpp  fdw_handler.cpp  fdw_validator.cpp  key_parser.cpp  key_pattern.cpp  level_pivot_fdw.cpp  pivot_scanner.cpp  projection.cpp  raw_scanner.cpp  raw_writer.cpp  schema_discovery.cpp  type_converter.cpp  writer.cpp
test/benchmark/: CMakeLists.txt  bench_key_parser.cpp
test/integration/: CMakeLists.txt  cleanup.sql  embedded_postgres.sh  run_tests.sh  setup.sql  test_modify.sql  test_notify.sql  test_raw.sql  test_raw_validation.sql  test_schema_discovery.sql  test_select.sql  test_write_batch.sql
test/integration/benchmark/: CMakeLists.txt  bench_cleanup.sql  bench_data_gen.sql  bench_setup.sql  bench_utils.sh  run_benchmarks.sh
test/integration/benchmark/benchmarks/: batch_insert.sh  delete_batch.sh  delete_single.sh  filtered_scan.sh  full_scan.sh  prefix_scan.sh  single_insert.sh  update_new_identity.sh  update_same_identity.sh
test/integration/benchmark/results/: .gitignore
test/unit/: CMakeLists.txt  test_key_parser.cpp  test_key_pattern.cpp  test_notify.cpp  test_raw_scanner.cpp  test_schema_discovery.cpp
